--- a/src/promociones/FXMLFormularioAltaPromocion.fxml
+++ b/src/promociones/FXMLFormularioAltaPromocion.fxml
@@ -1,19 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="483.0" prefWidth="600.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="promociones.FXMLFormularioAltaPromocionController">
+<AnchorPane id="AnchorPane" prefHeight="525.0" prefWidth="600.0" style="-fx-background-color: #0A4962;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="promociones.FXMLFormularioAltaPromocionController">
    <children>
       <Label layoutX="200.0" layoutY="14.0" text="Registro de Promociones" textFill="WHITE">
          <font>
@@ -46,8 +43,8 @@
       <ComboBox fx:id="cbEstatus" layoutX="306.0" layoutY="285.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona el estatus" style="-fx-background-color: white;" />
       <Label layoutX="310.0" layoutY="326.0" text="Sucursal" textFill="WHITE" />
       <ComboBox fx:id="cbSucursal" layoutX="307.0" layoutY="350.0" prefHeight="25.0" prefWidth="224.0" promptText="Selecciona la sucursal" style="-fx-background-color: white;" />
-      <Button fx:id="btnGuardar" layoutX="316.0" layoutY="433.0" mnemonicParsing="false" onAction="#clicGuardarPromocion" style="-fx-background-color: white;" text="Guardar" />
-      <Button fx:id="btnCancelar" layoutX="226.0" layoutY="433.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
+      <Button fx:id="btnGuardar" layoutX="320.0" layoutY="475.0" mnemonicParsing="false" onAction="#clicGuardarPromocion" style="-fx-background-color: white;" text="Guardar" />
+      <Button fx:id="btnCancelar" layoutX="230.0" layoutY="475.0" mnemonicParsing="false" onAction="#clicCancelar" style="-fx-background-color: white;" text="Cancelar" />
       <ImageView fitHeight="23.0" fitWidth="23.0" layoutX="171.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../imagenes/añadir.png" />
